Fix main container on mobile

--- a/styles/dark-marcoalmeida.css
+++ b/styles/dark-marcoalmeida.css
@@ -21,6 +21,16 @@ body {
   background: #131416;
   border-radius: 0.5rem;
 }
+@media (max-width: 768px) {
+    .bio-container {
+        max-width: 100vw;
+        margin: 0px !important;
+        padding: 2rem;
+        min-height: 100vw;
+        border-radius: 0px;
+      }
+    }
+}
 
 /*.bio-container::before {
   content: "";
